--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Test_Level.Test_Level
 GameDefaultMap=/Game/Test_Level.Test_Level
-GlobalDefaultGameMode="/Script/Ava.AvaGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/BP_AvaGameMode.BP_AvaGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
