--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Test_Level.Test_Level
-GameDefaultMap=/Game/Test_Level.Test_Level
+GameDefaultMap=/Game/Testing/Test_Level.Test_Level
 GlobalDefaultGameMode=/Game/Blueprints/BP_AvaGameMode.BP_AvaGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -9,3 +9,11 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RecastNavMesh]
+bDrawPolyEdges=True
+AgentRadius=30.000000
+AgentHeight=80.000000
+AgentMaxHeight=100.000000
+TileSizeUU=480.000000
+
