--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 
 ipch/AVA-43cc80ce/vc140.ipch filter=lfs diff=lfs merge=lfs -text
+Ava.VC.db filter=lfs diff=lfs merge=lfs -text
+*.umap filter=lfs diff=lfs merge=lfs -text
